--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="All Things Tekton" />
   <link rel="apple-touch-icon" href="logo192.png" />
   <link rel="stylesheet" href="index.css">
   <!--
@@ -23,10 +23,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Pipelines-Marketplace</title>
-  <script
-    src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?lang=yaml&amp;skin=default">
-  </script>
+  <script src="%PUBLIC_URL%/config.js"> </script>
+  <title>Tekton Hub</title>
 
 </head>
 
